--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -3,7 +3,7 @@ title: I baught a chair and here's what I learned
 date: 2022-04-09
 author: Pouya
 desc: Laudantium iste repellat et. Et officiis corporis. At est placeat voluptas aut. Soluta dolor quae quae tempora. Voluptatibus quibusdam natus. Facilis ea repellendus expedita voluptatum rerum autem.
-img: https://api.lorem.space/image/furniture?w=800&h=500
+img: https://picsum.photos/500/800
 imgWidth: 800
 imgHeight: 500
 ---
