--- a/src/posts/markdown-guide.mdx
+++ b/src/posts/markdown-guide.mdx
@@ -3,7 +3,7 @@ title: 'Markdown Guide'
 date: 2022-08-23
 author: Pouya
 desc: 'Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown.'
-img: https://api.lorem.space/image/furniture?w=500&h=500
+img: https://picsum.photos/500/500
 imgWidth: 500
 imgHeight: 500
 ---
