Feat: generate RSS feed

--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
 title: I baught a chair and here's what I learned
 date: 2022-04-09
-author: Pouya
+author: Aleksa
 desc: Laudantium iste repellat et. Et officiis corporis. At est placeat voluptas aut. Soluta dolor quae quae tempora. Voluptatibus quibusdam natus. Facilis ea repellendus expedita voluptatum rerum autem.
 img: https://picsum.photos/800/500
 imgWidth: 800
