--- a/src/posts/markdown-guide.mdx
+++ b/src/posts/markdown-guide.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Markdown Guide'
 date: 2022-08-23
-author: Pouya
+author: Aleksa
 desc: 'Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown.'
 img: https://picsum.photos/500/500
 imgWidth: 500
