Feat: copy to clipboard for code markdown blocks

--- a/src/posts/markdown-guide.mdx
+++ b/src/posts/markdown-guide.mdx
@@ -142,16 +142,8 @@ I think you should use an
 Here’s an example of how you can use syntax highlighting with [GitHub Flavored Markdown](https://help.github.com/articles/basic-writing-and-formatting-syntax/):
 
 ```js fancyAlert.js
-function fancyAlert(arg) {
-  if (arg) {
-    $.facebox({ div: '#foo' });
-  }
-}
-```
+// fancyAlert.js
 
-And here's how it looks - nicely colored with styled code titles!
-
-```js fancyAlert.js
 function fancyAlert(arg) {
   if (arg) {
     $.facebox({ div: '#foo' });
