Fix: some text for blogs

--- a/src/posts/debugging-javascript.mdx
+++ b/src/posts/debugging-javascript.mdx
@@ -151,4 +151,4 @@ Finally, it is also a good idea to use a linter. A linter is a tool that checks 
 
 In conclusion, debugging is an important skill for any frontend developer. By understanding common mistakes and pitfalls in JavaScript, using debugging techniques, and following best practices such as using a consistent coding style and writing test cases, you can effectively debug your code and improve the quality and reliability of your applications.
 
-We hope this blog post has given you some useful tips and tricks for debugging JavaScript, and that you will continue to practice and improve your debugging skills.
+I hope this blog post has given you some useful tips and tricks for debugging JavaScript, and that you will continue to practice and improve your debugging skills.
