--- a/src/posts/git-and-version-control.mdx
+++ b/src/posts/git-and-version-control.mdx
@@ -112,8 +112,8 @@ The feature branch workflow is a more flexible Git workflow that is suitable for
 
 The forking workflow is a Git workflow that is used when multiple developers want to contribute to the same project, but they do not have direct access to the main repository. In this workflow, each developer "forks" the main repository, which creates a copy of the repository that they can work on. When a developer has made some changes, they can submit a "pull request" to the main repository, which asks the maintainers of the main repository to review and merge their changes. This workflow allows for collaboration and code review, but it can be slow and cumbersome, especially for large projects with many contributors.
 
-The Git flow workflow is a more advanced Git workflow that is suitable for large projects with multiple developers and complex requirements. In this workflow, there are several different branches, each with a different purpose. For example, there is a `develop` branch, where the main development happens, and there are also `feature` branches, where developers work on their own features. There are also `release` branches, where the code is prepared for release, and `hotfix` branches, where urgent changes are made. This workflow provides a lot of flexibility and collaboration, but it can be difficult to set up and manage, especially for beginners.
+The Gitflow workflow is a more advanced Git workflow that is suitable for large projects with multiple developers and complex requirements. In this workflow, there are several different branches, each with a different purpose. For example, there is a `develop` branch, where the main development happens, and there are also `feature` branches, where developers work on their own features. There are also `release` branches, where the code is prepared for release, and `hotfix` branches, where urgent changes are made. This workflow provides a lot of flexibility and collaboration, but it can be difficult to set up and manage, especially for beginners.
 
 ## Conclusion
 
-In this blog post, we covered the basics of Git and version control, and discussed some best practices and workflows for using them in your projects. We hope that this information will help you to start using Git and version control in your own projects, and to improve your skills as a developer. If you have any questions or comments, feel free to leave a comment below, or to contact us directly. Thank you for reading!
+In this blog post, we covered the basics of Git and version control, and discussed some best practices and workflows for using them in your projects. I hope that this information will help you to start using Git and version control in your own projects, and to improve your skills as a developer. If you have any questions or comments, feel free to leave a comment below, or to contact us directly. Thank you for reading!
