Fix: git blog post small change

--- a/src/posts/git-and-version-control.mdx
+++ b/src/posts/git-and-version-control.mdx
@@ -116,4 +116,4 @@ The Gitflow workflow is a more advanced Git workflow that is suitable for large 
 
 ## Conclusion
 
-In this blog post, we covered the basics of Git and version control, and discussed some best practices and workflows for using them in your projects. I hope that this information will help you to start using Git and version control in your own projects, and to improve your skills as a developer. If you have any questions or comments, feel free to leave a comment below, or to contact us directly. Thank you for reading!
+In this blog post, we covered the basics of Git and version control, and discussed some best practices and workflows for using them in your projects. I hope that this information will help you to start using Git and version control in your own projects, and to improve your skills as a developer. If you have any questions or comments, feel free to leave a comment below, or to contact me directly. Thank you for reading!
