Fix: text html css blog post

--- a/src/posts/html-css-fundamentals.mdx
+++ b/src/posts/html-css-fundamentals.mdx
@@ -120,6 +120,6 @@ To write effective and maintainable HTML and CSS code, you need to follow some b
 
 ## Conclusion
 
-In this blog post, we have covered the basics of HTML and CSS, and we have shown you how to use them to create your own webpage. We have introduced the concepts and syntax of HTML and CSS, and we have discussed some best practices for organizing and styling your code. We have also provided some tips and tools for testing and debugging your code.
+In this blog post, we have covered the basics of HTML and CSS, and I have shown you how to use them to create your own webpage. We have introduced the concepts and syntax of HTML and CSS, and we have discussed some best practices for organizing and styling your code. I have also provided some tips and tools for testing and debugging your code.
 
-HTML and CSS are essential skills for web development, and they are the building blocks of the web. By learning and practicing HTML and CSS, you can create beautiful and functional webpages that can be accessed by anyone, anywhere, on any device. We encourage you to continue learning and improving your HTML and CSS skills, and to share your webpages and experiences with others.
+HTML and CSS are essential skills for web development, and they are the building blocks of the web. By learning and practicing HTML and CSS, you can create beautiful and functional webpages that can be accessed by anyone, anywhere, on any device. I encourage you to continue learning and improving your HTML and CSS skills, and to share your webpages and experiences with others.
