--- a/src/posts/git-and-version-control.mdx
+++ b/src/posts/git-and-version-control.mdx
@@ -3,9 +3,9 @@ title: 'Git and Version Control for Beginners: Best Practices and Workflows'
 date: 2022-12-03T15:41:56.000Z
 author: Aleksa
 desc: 'Learn the basics of Git and version control, and how to use them effectively in your projects. This blog post covers the essentials and includes best practices and workflows. Read on to start using Git and version control in your own projects.'
-img: https://picsum.photos/500/500
-imgWidth: 500
-imgHeight: 500
+img: '/assets/thumbnails/pexels-realtoughcandycom-11035539.jpg'
+imgWidth: 640
+imgHeight: 427
 ---
 
 ## Table of Contents
