--- a/src/posts/html-css-fundamentals.mdx
+++ b/src/posts/html-css-fundamentals.mdx
@@ -3,9 +3,9 @@ title: 'HTML and CSS Fundamentals: Building Your First Webpage'
 date: 2022-12-06T18:18:12.000Z
 author: Aleksa
 desc: 'Get started with HTML and CSS, the fundamental building blocks of the web. This blog post covers the basics and includes best practices and examples. Read on to learn how to create your own webpages and improve your web development skills.'
-img: https://picsum.photos/500/500
-imgWidth: 500
-imgHeight: 500
+img: '/assets/thumbnails/pexels-lukas-574071.jpg'
+imgWidth: 640
+imgHeight: 424
 ---
 
 ## Table of Contents
