--- a/src/posts/snowfall-effect-css-javascript.mdx
+++ b/src/posts/snowfall-effect-css-javascript.mdx
@@ -8,7 +8,7 @@ imgWidth: 640
 imgHeight: 427
 ---
 
-# Table of Contents
+## Table of Contents
 
 1. [Introduction](#introduction)
 2. [The CSS](#the-css)
