Fix: snow post text

--- a/src/posts/snowfall-effect-css-javascript.mdx
+++ b/src/posts/snowfall-effect-css-javascript.mdx
@@ -111,7 +111,7 @@ const colors = ['#aaa', '#bbb', '#ccc', '#ddd', '#eee'];
 const flakes = 24;
 ```
 
-Then we need to grab a reference to the `html` or `body` element on our page that has the `.snow` class applied to it. We will store this reference in a variable called `container`.
+Then we need to grab a reference to the `div` element on our page that has the `.snow` class applied to it. We will store this reference in a variable called `container`.
 
 ```js
 // snowflake container
