--- a/src/posts/snowfall-effect-css-javascript.mdx
+++ b/src/posts/snowfall-effect-css-javascript.mdx
@@ -198,7 +198,7 @@ Once you have done that, you can add the following HTML to your page where you w
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <-- apply .snow contaienr class here -->
+    <-- apply .snow contaiener class here -->
     <div class="snow"></div>
     <-- js -->
     <script src="snow.js"></script>
