--- a/src/posts/snowfall-effect-css-javascript.mdx
+++ b/src/posts/snowfall-effect-css-javascript.mdx
@@ -34,10 +34,10 @@ First, we need need to write some styles for out container element. This element
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 95%;
   pointer-events: none;
   z-index: 999;
-  overflow: hidden;
+  overflow: visible;
 }
 ```
 
