Feat: new blog post

--- a/src/posts/debugging-javascript.mdx
+++ b/src/posts/debugging-javascript.mdx
@@ -10,11 +10,11 @@ imgHeight: 427
 
 ## Table of Contents
 
-1. [Introduction](#introduction)
-2. [Common Mistakes and Pitfalls in JavaScript](#common-mistakes-and-pitfalls-in-javascript)
-3. [Techniques for Debugging](#techniques-for-debugging)
-4. [Best Practices for Debugging](#best-practices-for-debugging)
-5. [Conclusion](#conclusion)
+- [Introduction](#introduction)
+- [Common Mistakes and Pitfalls in JavaScript](#common-mistakes-and-pitfalls-in-javascript)
+- [Techniques for Debugging](#techniques-for-debugging)
+- [Best Practices for Debugging](#best-practices-for-debugging)
+- [Conclusion](#conclusion)
 
 ## Introduction
 
