--- a/src/posts/getting-started-with-typescript.mdx
+++ b/src/posts/getting-started-with-typescript.mdx
@@ -10,11 +10,11 @@ imgHeight: 317
 
 ## Table of Contents
 
-1. [Introduction](#introduction)
-2. [Basics of TypeScript](#basics-of-typescript)
-3. [Setting up TypeScript](#setting-up-typescript)
-4. [Writing TypeScript code](#writing-typescript-code)
-5. [Conclusion](#conclusion)
+- [Introduction](#introduction)
+- [Basics of TypeScript](#basics-of-typescript)
+- [Setting up TypeScript](#setting-up-typescript)
+- [Writing TypeScript code](#writing-typescript-code)
+- [Conclusion](#conclusion)
 
 ## Introduction
 
