--- a/src/posts/git-and-version-control.mdx
+++ b/src/posts/git-and-version-control.mdx
@@ -10,12 +10,12 @@ imgHeight: 427
 
 ## Table of Contents
 
-1. [Introduction](#introduction)
-2. [Introduction to Git and Version Control](#introduction-to-git-and-version-control)
-3. [Getting Started with Git](#getting-started-with-git)
-4. [Best Practices for Using Git](#best-practices-for-using-git)
-5. [Git Workflows for Different Projects](#git-workflows-for-different-projects)
-6. [Conclusion](#conclusion)
+- [Introduction](#introduction)
+- [Introduction to Git and Version Control](#introduction-to-git-and-version-control)
+- [Getting Started with Git](#getting-started-with-git)
+- [Best Practices for Using Git](#best-practices-for-using-git)
+- [Git Workflows for Different Projects](#git-workflows-for-different-projects)
+- [Conclusion](#conclusion)
 
 ## Introduction
 
