--- a/src/posts/html-css-fundamentals.mdx
+++ b/src/posts/html-css-fundamentals.mdx
@@ -10,13 +10,13 @@ imgHeight: 424
 
 ## Table of Contents
 
-1. [Introduction](#introduction)
-2. [Introduction to HTML and CSS](#introduction-to-html-and-css)
-3. [Getting Started with HTML](#getting-started-with-html)
-4. [Getting Started with CSS](#getting-started-with-css)
-5. [Building Your First Webpage](#building-your-first-webpage)
-6. [Best Practices for HTML and CSS](#best-practices-for-html-and-css)
-7. [Conclusion](#conclusion)
+- [Introduction](#introduction)
+- [Introduction to HTML and CSS](#introduction-to-html-and-css)
+- [Getting Started with HTML](#getting-started-with-html)
+- [Getting Started with CSS](#getting-started-with-css)
+- [Building Your First Webpage](#building-your-first-webpage)
+- [Best Practices for HTML and CSS](#best-practices-for-html-and-css)
+- [Conclusion](#conclusion)
 
 ## Introduction
 
