--- a/src/posts/snowfall-effect-css-javascript.mdx
+++ b/src/posts/snowfall-effect-css-javascript.mdx
@@ -10,11 +10,11 @@ imgHeight: 427
 
 ## Table of Contents
 
-1. [Introduction](#introduction)
-2. [The CSS](#the-css)
-3. [The JavaScript](#the-javascript)
-4. [Using the Effect on Your Page](#using-the-effect-on-your-page)
-5. [Conclusion](#conclusion)
+- [Introduction](#introduction)
+- [The CSS](#the-css)
+- [The JavaScript](#the-javascript)
+- [Using the Effect on Your Page](#using-the-effect-on-your-page)
+- [Conclusion](#conclusion)
 
 ## Introduction
 
