Fix: post title

--- a/src/posts/rest-api-with-typescript-nodejs-and-express.mdx
+++ b/src/posts/rest-api-with-typescript-nodejs-and-express.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Building a RESTful API with TypeScript, Node.js, and Express'
+title: 'Building a RESTful API with TypeScript, Node.js and Express'
 date: 2022-12-22T14:09:12.000Z
 author: Aleksa
 desc: 'Learn how to build a RESTful API using TypeScript, Node.js, and the Express framework. This blog post covers adding endpoints and handling HTTP verbs, validation and data modeling with TypeScript, handling errors and debugging, and deployment.'
