Feat: Upgrade to Astro 3.0, new posts and fixes all around

--- a/src/posts/becoming-a-web-developer-in-2023.mdx
+++ b/src/posts/becoming-a-web-developer-in-2023.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Ultimate Guide to Starting a Career in Web Development in 2023'
 date: 2022-12-31T14:58:16.000Z
-author: Aleksa
+author: 'Aleksa'
 desc: "Get started on your career in web development in 2023 with this ultimate guide. Learn how to build your skills, gain real-world experience, and find job opportunities. Follow our roadmap and you'll be well on your way to success in the exciting field of web development."
 img: '/assets/thumbnails/pexels-olia-danilevich-4974915.jpg'
 imgWidth: 640
