--- a/src/posts/debugging-javascript.mdx
+++ b/src/posts/debugging-javascript.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Debugging JavaScript: Common Techniques and Tools'
 date: 2022-12-01T12:34:56.000Z
-author: Aleksa
+author: 'Aleksa'
 desc: 'As a frontend developer, debugging is an essential skill that can help you identify and fix errors in your code. In this blog post, we will discuss some common mistakes and pitfalls in JavaScript, as well as techniques and tools that can help you debug your code effectively.'
 img: '/assets/thumbnails/pexels-tim-gouw-52608.jpg'
 imgWidth: 640
