--- a/src/posts/getting-started-with-typescript.mdx
+++ b/src/posts/getting-started-with-typescript.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started with TypeScript: Beginner's Guide"
 date: 2022-08-23T16:23:21.000Z
-author: Aleksa
+author: 'Aleksa'
 desc: "In this beginner's guide, we'll cover the basics of TypeScript and how to get started using it in your own projects. Whether you're new to TypeScript or just looking to refresh your knowledge, this post has you covered."
 img: '/assets/thumbnails/typescript.jpg'
 imgWidth: 640
