--- a/src/posts/html-css-fundamentals.mdx
+++ b/src/posts/html-css-fundamentals.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'HTML and CSS Fundamentals: Building Your First Webpage'
 date: 2022-12-06T18:18:12.000Z
-author: Aleksa
+author: 'Aleksa'
 desc: 'Get started with HTML and CSS, the fundamental building blocks of the web. This blog post covers the basics and includes best practices and examples. Read on to learn how to create your own webpages and improve your web development skills.'
 img: '/assets/thumbnails/pexels-lukas-574071.jpg'
 imgWidth: 640
@@ -47,7 +47,7 @@ In this code, the `<p>` tag defines the element as a paragraph, and the text "He
 To create a complete HTML document, you need to include some additional elements and attributes. For example, the following HTML code creates a simple HTML document with a title, a heading, and a paragraph:
 
 ```html
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
   <head>
