--- a/src/posts/rest-api-with-typescript-nodejs-and-express.mdx
+++ b/src/posts/rest-api-with-typescript-nodejs-and-express.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Building a RESTful API with TypeScript, Node.js and Express'
 date: 2022-12-22T14:09:12.000Z
-author: Aleksa
+author: 'Aleksa'
 desc: 'Learn how to build a RESTful API using TypeScript, Node.js, and the Express framework. This blog post covers adding endpoints and handling HTTP verbs, validation and data modeling with TypeScript, handling errors and debugging, and deployment.'
 img: '/assets/thumbnails/pexels-realtoughcandycom-11035380.jpg'
 imgWidth: 640
