Fix: PR blog post

--- a/src/posts/first-github-pull-request-tutorial.mdx
+++ b/src/posts/first-github-pull-request-tutorial.mdx
@@ -22,11 +22,11 @@ imgHeight: 427
   - [Step 6: Create the Pull Request](#step-6-create-the-pull-request)
 - [Conclusion](#conclusion)
 
-## Introduction: Mastering the Art of GitHub Pull Requests
+## Introduction
 
 Welcome to this comprehensive tutorial on making your first GitHub Pull Request (PR). This guide aims to provide you with a deep understanding of PRs, a critical component of collaborative software development.
 
-## Why GitHub Pull Requests Are Crucial: The Importance Explained
+## Why GitHub Pull Requests Are Crucial
 
 Pull Requests are essential for multiple reasons:
 
@@ -34,7 +34,7 @@ Pull Requests are essential for multiple reasons:
 - **Collaboration**: They serve as a key collaborative tool in team-based software projects.
 - **Version Control**: PRs act as a filter, ensuring that only reviewed and approved changes make it to the main codebase.
 
-## Must-Know Prerequisites: Getting Ready for Your First PR
+## Must-Know Prerequisites
 
 Before embarking on your PR journey, ensure you have:
 
@@ -42,7 +42,7 @@ Before embarking on your PR journey, ensure you have:
 - Basic knowledge of Git commands and workflows.
 - A specific project or repository to which you aim to contribute.
 
-## Step-by-Step Tutorial: How to Make Your First GitHub Pull Request
+## Step-by-Step Tutorial
 
 ### Step 1: Fork the Repository
 
@@ -87,7 +87,7 @@ git push origin feature-or-fix-branch
 
 Navigate to the 'Pull Requests' tab of the original repository. Click 'New Pull Request', select your fork and branch, and then fill out and submit the PR form.
 
-## Conclusion:
+## Conclusion
 
 By understanding and mastering the art of Pull Requests, you equip yourself with a crucial skill in collaborative software development. This guide aimed to provide a thorough, step-by-step approach to making your first PR, demystifying the process and setting you up for future contributions.
 
