updated blog post

--- a/src/posts/Hackademics-Series---So-you-want-to-be-a-hacker-huh-Well-lets-start-with-a-little-history-.mdx
+++ b/src/posts/Hackademics-Series---So-you-want-to-be-a-hacker-huh-Well-lets-start-with-a-little-history-.mdx
@@ -1,18 +1,52 @@
 ---
-title: >-
-  Hackademics Series - So you want to be a hacker, huh? Well let's start with a
-  little history. 
+title: Hackademics Series - What is a hacker?
 date: 2024-11-30T06:00:00.000Z
 author: Scarlett Danger
 desc: >-
   This blog post are for those who are serious about learning to be a hacker.
-  When I say hacker I mean those interested in joining the culture of hacking,
-  not just getting a few certifications for a job in information security. In
-  this post we will review the history of hacking and the culture around hacking
+  When I say hacker I mean those interested in joining the hacking scene, not
+  just getting a few certifications for a job in information security. In this
+  post we will review the history of hacking and the culture around hacking
   today. 
-img: /assets/Screenshot 2024-11-11 204851.png
+img: /assets/Cyber attack-img.png
 imgWidth: 500
 imgHeight: 250
 ---
 
-TBA
+## whoami
+
+Welcome to my "Hackademics" series. I’m Scarlett Danger, your friendly spy rapper, and in this series I am delving into the wild world of hacking. I am a professional web developer but I have been dabbling casually in cybersecurity since 2016 when I was introduced via an organization called Women in Cybersecurity (WiCyS). I took penetration testing, cyber warfare and digital forensics courses in the college and I have attended numerous information security conferences as well. As a software engineer I practice secure coding and with the "shift-left" movement, software engineers are expected to take on more and more cybersecurity responsibilities in the software development lifecycle in order to protect an organization and build secure software. Despite all of this I didn't really understand hacker culture until late 2023 when I started joining hacker communities on Discord and IRC. 
+
+## What is a hacker?
+
+Before you can begin your journey to become a hacker I think its important to take time to understand what a hacker is exactly. It isn't just a profession where you just get a degree or certification in order to get a job. It is more than that. Its a lifestyle with its own unique and colorful culture and history. Hackers come in different flavors and might have different motives for getting into hacking. Some might be motivated to use hacking to cheat on their favorite video game and some might want to make waves in main stream media through political activism. Some are motivated by making money and some want revenge. What differentiates a l33t hacker from a skid (script kiddie) is the ability to truly understand computer architecture and software design to engineer solutions using the resources available. Hackers aren't afraid to take things apart and push the limits of a technology to accomplish their goals. Its a mindset. 
+
+### Types of Hackers
+
+* White Hats - Ethical hacker who only hacks targets with permission and operate within the law. They are usually IT professionals and bug bounty hunters. 
+* Gray Hat - A hacker that is ethical for the most part but will use their abilities to access systems without permission without bad intentions. 
+* Black Hat - A cyber criminal who doesn't mind breaking laws when hacking. 
+* Skids - Script kiddies. These are inexperienced hackers that use exploits from more advanced hackers. They usually do not know the inner workings of the scripts but can be skilled at social engineering. 
+
+### The Scene
+
+There is a creative side to hacking that involves art and music. Nerdcore music emerged from O.G. hackers such as YTCracker. Dual Core is another great nerdcore artist and hacker that has a song called the [10 Hack Commandments](https://www.youtube.com/watch?v=Sr8ILq1a_yw) which are 10 rules you would want to follow as a hacker. There is a colorful culture that has developed from [The Scene](https://defacto2.net/) and iconic hacker conferences like [DEFCON](https://defcon.org/) and I think its worth exploring as you learn the technical aspects of the craft as well. There is a lot of creativity needed in order to be a great hacker.  
+
+#### 10 Hack Commandments
+
+1. Never let someone know how much code you hold. 
+2. Never let them know your next move.
+3. Never trust nobody. 
+4. Shut the F\*\*\* Up.
+5. Never do hacks where you rest at. 
+6. Encrypt all your data. 
+7. Keep identities and profiles separate. 
+8. Never keep no weight on you. 
+9. Use your right to your attorney, keep away from the police. 
+10. Shut the actual F\*\*\* Up. 
+
+## Homework
+
+As with any skill it takes a lot of practice to become an expert. Some people are naturally gifted at hacking while it might not come naturally to others so they need to practice more. If you have not already create an account on [Try Hack Me](https://tryhackme.com/). Its a fun way to get hands-on learning about hacking fundamentals. You don't need a degree to become a hacker but if you want to learn definitely take some time to study. In our next blog post we will cover risk assessment and cyber threat intelligence. 
+
+Also, take some time to watch this short 11 minute video called [The Origins of Hacker Culture](https://www.youtube.com/watch?v=zBE9_kTFIro) by Internet Underground to get a better understanding of hacker subculture. I also recommend watching the 1995 movie Hackers which you can watch here [here](https://www.youtube.com/watch?v=5T_CqqjOPDc) . Another great hacker movie to check out is the 1983 movie [Wargames](https://www.youtube.com/watch?v=TQUsLAAZuhU). 
