--- a/src/posts/Short-OSINT-Article.mdx
+++ b/src/posts/Short-OSINT-Article.mdx
@@ -10,7 +10,7 @@ desc: >
   intelligence analysts, and even cybersecurity experts all use OSINT to find
   information that they're interested in, which could be information on a
   specific person, group of people, or many other things.
-img: /assets/Search engines-img.png
+img: /assets/108308_pfp.jpg
 imgWidth: 2000
 imgHeight: 1000
 ---
@@ -30,17 +30,16 @@ Here's some key takeaways:
 
 ## Disclaimer: You will have to protect your privacy
 
-Again, as with most things in cyber, you need to conduct your research with OPSEC (Operations Security) In mind, some things you can use may be VPNs, URL and File scanners, antivirus software. 
+Again, as with most things in cyber, you need to conduct your research with OPSEC (Operations Security) In mind, some things you can use may be VPNs, URL and File scanners, antivirus software.
 
 ## Tools of the Trade
 
 Alright time for some fun stuff, tools, everyone loves tools so here's 3 OSINT tools (I know only a few but one of em has a couple 100 tools in it), of course, you can't talk about OSINT without bringing up this one
 
-1. OSINT Framework, OSINT framework is a collection of categorized and well organized tools and resources for different types of investigations, it has almost any tool you'd ever need (https\://osintframework.com/)
-2. Maltego is another very popular tool, but for visualization, it's a graphical link analysis tool for mapping and analyzing relations between entities (https\://www\.maltego.com/)
-3. have i been pwned? yeah probably, but you can check if you or someone else has by using this tool, have i been pwned. It is a tool that checks if emails or usernames have been compromised in data breached (https\://haveibeenpwned.com/)\
-
+1. OSINT Framework, OSINT framework is a collection of categorized and well organized tools and resources for different types of investigations, it has almost any tool you'd ever need ([https://osintframework.com/](https://osintframework.com/))
+2. Maltego is another very popular tool, but for visualization, it's a graphical link analysis tool for mapping and analyzing relations between entities ([https://www.maltego.com/](https://www.maltego.com/))
+3. have i been pwned? yeah probably, but you can check if you or someone else has by using this tool, have i been pwned. It is a tool that checks if emails or usernames have been compromised in data breached ([https://haveibeenpwned.com/)\\](https://haveibeenpwned.com/\)/)
 
 In conclusion, use OSINT and 𝐃𝐆𝟒𝐄.
 
-*shouts dimez, this is a less serious article hopefully you enjoyed it, if you didn't email your complaints to rapper\@gmail.com*
+*shouts dimez, this is a less serious article hopefully you enjoyed it, if you didn't email your complaints to [rapper@gmail.com](mailto\:rapper@gmail.com)*
